--- a/ethics-frontend/src/index.css
+++ b/ethics-frontend/src/index.css
@@ -12,6 +12,17 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+#root{
+  width: 100%;
+  height: fit-content;
+}
+
+html, body {
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
 
 a {
   font-weight: 500;
