--- a/ethics-frontend/src/App.css
+++ b/ethics-frontend/src/App.css
@@ -21,9 +21,10 @@ p {
   /* min-height: 100vh;        */
 }
 .main-content {
+  margin: 2px;
+  margin-top: 5px;
   flex: 1;
   padding: 20px;
-  background-color: white;
   /* margin-top: 120px; Adjust this value based on your header/navbar height */
 }
 footer {
